tests/tooling/fixtures/native/recovery/negative/negative_assignment_compound_bitwise_bool_target.objc3
// Expected diagnostic code(s): O3S206.
module NegativeAssignmentCompoundBitwiseBoolTarget;

fn main() -> i32 {
  let flag = true;
  flag &= 1;
  return 0;
}
